crates/providers/ferrin-google/tests/suite/snapshots/all__suite__stream__stream_code_execution.snap
---
source: crates/providers/ferrin-google/tests/suite/stream.rs
expression: parts
---
[
  {
    "type": "stream-start",
    "warnings": []
  },
  {
    "type": "response-metadata",
    "id": "resp-code-stream"
  },
  {
    "type": "tool-call",
    "tool_call_id": "id-0",
    "tool_name": "code_execution",
    "input": "{\"language\":\"PYTHON\",\"code\":\"print(2 + 2)\"}",
    "provider_executed": true,
    "provider_metadata": {
      "google": {
        "serverToolType": "code_execution"
      }
    }
  },
  {
    "type": "tool-result",
    "tool_call_id": "id-0",
    "tool_name": "code_execution",
    "result": {
      "outcome": "OUTCOME_OK",
      "output": "4\n"
    },
    "provider_metadata": {
      "google": {
        "serverToolType": "code_execution"
      }
    }
  },
  {
    "type": "source",
    "source_type": "url",
    "id": "id-1",
    "url": "https://example.test/a",
    "title": "A"
  },
  {
    "type": "text-start",
    "id": "0"
  },
  {
    "type": "text-delta",
    "id": "0",
    "delta": "The result is 4."
  },
  {
    "type": "text-end",
    "id": "0"
  },
  {
    "type": "finish",
    "finish_reason": {
      "unified": "stop",
      "raw": "STOP"
    },
    "usage": {
      "input": {
        "total": 15,
        "no_cache": 15,
        "cache_read": 0
      },
      "output": {
        "total": 30,
        "text": 30,
        "reasoning": 0
      }
    },
    "provider_metadata": {
      "google": {
        "promptFeedback": null,
        "groundingMetadata": {
          "groundingChunks": [
            {
              "web": {
                "uri": "https://example.test/a",
                "title": "A"
              }
            },
            {
              "web": {
                "uri": "https://example.test/a",
                "title": "A again"
              }
            }
          ]
        },
        "urlContextMetadata": null,
        "safetyRatings": null,
        "usageMetadata": {
          "promptTokenCount": 15,
          "candidatesTokenCount": 30,
          "totalTokenCount": 45
        },
        "finishMessage": null,
        "serviceTier": null
      }
    }
  }
]
