crates/providers/ferrin-google/tests/suite/snapshots/all__suite__stream__stream_no_args_tool_call.snap
---
source: crates/providers/ferrin-google/tests/suite/stream.rs
expression: parts
---
[
  {
    "type": "stream-start",
    "warnings": []
  },
  {
    "type": "response-metadata",
    "id": "_vr4aYiWEJnYodAPkujX0QM"
  },
  {
    "type": "reasoning-start",
    "id": "0"
  },
  {
    "type": "reasoning-delta",
    "id": "0",
    "delta": "**Processing User Requests**\n\nI've started by understanding the user's instructions. Currently, I'm focusing on the initial steps: reading the specified theme using the appropriate tool. Next, I plan to tackle reading the screens, beginning with screen \"A,\" then proceeding with \"B\" and \"C\" in parallel as instructed.\n\n\n"
  },
  {
    "type": "tool-input-start",
    "id": "id-0",
    "tool_name": "read_theme",
    "provider_metadata": {
      "google": {
        "thoughtSignature": "AY89a18a8/Loc2wl5oft+F3qHoU4VPX0L9ljRtKxfjhEuimSIqhzYEJAGT5Sgd8OH2C+Te2YY1DKfGsr+ajyR7o2gTbljQMXyvmOimX/W3ZzWOabOHpiC5zNjii2CfPBV9+LG5Gu0efVfzdcNTnomFaak9hP/xEoWUk/Ahh2GcT1DC1UgMjqOARxYu7gP6i8LGrEC5TL7u+92163O2B33MCJxY7NHE6M99exsMJ2KOf2Exe3R5az0cmgxokiBW/ZOZacqzm1svBpoMb3PS1YFEWgXiyc1ExblrjL2O4rgC0qouMSvC0Z8fzYpbLrwiSko+/4vIsJpwSfI1RU3BIcmA389ZvZK8wO5N4cATH8vnlHUPD+RjeB4YXO2ymqGRPfvN0uGt6ojWyZfFphhP88um6MgyjcVMfabUrpd1uM5PbhLO+QfcQaMbozADjypuU/Z39i6L+DsGIrWWlxYTCpj4hClQ0mQg3heLPnD3DRmazSVbtJM+HGH0bc893sK51Wv4wCr8Fm++qL1PzIjEodb/0rq99OZ+1dgAlj6Uwo61i9x7i1EhiLzuWvlgsaLC0nM2GyNcODbueEHvucYpL6nhRpqIhX/yZWb3Yvg2WgBAisv0iSGLpntdrSSHYMZROAb5TnTKwxO3VJ7UwULqohGW2RU9NnKX8BzNI2POe1Jj0enxar+5LcuRE2q5V7jVTEiG6Y6thdFyXWVrvAHjnGXLSiYhDGngToAVjJ3Lynh6Zl77nAqV5QIcQMOyS+KBS1VW13eOFqG+cI6Bu2Dqfsv4Fb+0Qe5gjblTy54g52mxHi6FpdmqE4Q2lmxE3wUTyoWuzQLAanOf5m+hkTjjD08ljZkphCktxIEMt5+ZIXzfWDld7nD76+v0ICUxWyj+Ip1Gg5L2Zj2baFSn9VQ8qkFDKActLJetMBdRK+mkL7ZoBLB8wNLu3cX28m+EEyfq8+8bEuQv1hjTMtKN+5/BMCFmNvkb/pAxNnWUzzSyjaCjCiEiDM5kJXClomcvF2BTo/nQYepQ/8mmxdyc8ZCmdytGJB49ZeNTtCJA=="
      }
    }
  },
  {
    "type": "tool-input-end",
    "id": "id-0",
    "provider_metadata": {
      "google": {
        "thoughtSignature": "AY89a18a8/Loc2wl5oft+F3qHoU4VPX0L9ljRtKxfjhEuimSIqhzYEJAGT5Sgd8OH2C+Te2YY1DKfGsr+ajyR7o2gTbljQMXyvmOimX/W3ZzWOabOHpiC5zNjii2CfPBV9+LG5Gu0efVfzdcNTnomFaak9hP/xEoWUk/Ahh2GcT1DC1UgMjqOARxYu7gP6i8LGrEC5TL7u+92163O2B33MCJxY7NHE6M99exsMJ2KOf2Exe3R5az0cmgxokiBW/ZOZacqzm1svBpoMb3PS1YFEWgXiyc1ExblrjL2O4rgC0qouMSvC0Z8fzYpbLrwiSko+/4vIsJpwSfI1RU3BIcmA389ZvZK8wO5N4cATH8vnlHUPD+RjeB4YXO2ymqGRPfvN0uGt6ojWyZfFphhP88um6MgyjcVMfabUrpd1uM5PbhLO+QfcQaMbozADjypuU/Z39i6L+DsGIrWWlxYTCpj4hClQ0mQg3heLPnD3DRmazSVbtJM+HGH0bc893sK51Wv4wCr8Fm++qL1PzIjEodb/0rq99OZ+1dgAlj6Uwo61i9x7i1EhiLzuWvlgsaLC0nM2GyNcODbueEHvucYpL6nhRpqIhX/yZWb3Yvg2WgBAisv0iSGLpntdrSSHYMZROAb5TnTKwxO3VJ7UwULqohGW2RU9NnKX8BzNI2POe1Jj0enxar+5LcuRE2q5V7jVTEiG6Y6thdFyXWVrvAHjnGXLSiYhDGngToAVjJ3Lynh6Zl77nAqV5QIcQMOyS+KBS1VW13eOFqG+cI6Bu2Dqfsv4Fb+0Qe5gjblTy54g52mxHi6FpdmqE4Q2lmxE3wUTyoWuzQLAanOf5m+hkTjjD08ljZkphCktxIEMt5+ZIXzfWDld7nD76+v0ICUxWyj+Ip1Gg5L2Zj2baFSn9VQ8qkFDKActLJetMBdRK+mkL7ZoBLB8wNLu3cX28m+EEyfq8+8bEuQv1hjTMtKN+5/BMCFmNvkb/pAxNnWUzzSyjaCjCiEiDM5kJXClomcvF2BTo/nQYepQ/8mmxdyc8ZCmdytGJB49ZeNTtCJA=="
      }
    }
  },
  {
    "type": "tool-call",
    "tool_call_id": "id-0",
    "tool_name": "read_theme",
    "input": "{}",
    "provider_metadata": {
      "google": {
        "thoughtSignature": "AY89a18a8/Loc2wl5oft+F3qHoU4VPX0L9ljRtKxfjhEuimSIqhzYEJAGT5Sgd8OH2C+Te2YY1DKfGsr+ajyR7o2gTbljQMXyvmOimX/W3ZzWOabOHpiC5zNjii2CfPBV9+LG5Gu0efVfzdcNTnomFaak9hP/xEoWUk/Ahh2GcT1DC1UgMjqOARxYu7gP6i8LGrEC5TL7u+92163O2B33MCJxY7NHE6M99exsMJ2KOf2Exe3R5az0cmgxokiBW/ZOZacqzm1svBpoMb3PS1YFEWgXiyc1ExblrjL2O4rgC0qouMSvC0Z8fzYpbLrwiSko+/4vIsJpwSfI1RU3BIcmA389ZvZK8wO5N4cATH8vnlHUPD+RjeB4YXO2ymqGRPfvN0uGt6ojWyZfFphhP88um6MgyjcVMfabUrpd1uM5PbhLO+QfcQaMbozADjypuU/Z39i6L+DsGIrWWlxYTCpj4hClQ0mQg3heLPnD3DRmazSVbtJM+HGH0bc893sK51Wv4wCr8Fm++qL1PzIjEodb/0rq99OZ+1dgAlj6Uwo61i9x7i1EhiLzuWvlgsaLC0nM2GyNcODbueEHvucYpL6nhRpqIhX/yZWb3Yvg2WgBAisv0iSGLpntdrSSHYMZROAb5TnTKwxO3VJ7UwULqohGW2RU9NnKX8BzNI2POe1Jj0enxar+5LcuRE2q5V7jVTEiG6Y6thdFyXWVrvAHjnGXLSiYhDGngToAVjJ3Lynh6Zl77nAqV5QIcQMOyS+KBS1VW13eOFqG+cI6Bu2Dqfsv4Fb+0Qe5gjblTy54g52mxHi6FpdmqE4Q2lmxE3wUTyoWuzQLAanOf5m+hkTjjD08ljZkphCktxIEMt5+ZIXzfWDld7nD76+v0ICUxWyj+Ip1Gg5L2Zj2baFSn9VQ8qkFDKActLJetMBdRK+mkL7ZoBLB8wNLu3cX28m+EEyfq8+8bEuQv1hjTMtKN+5/BMCFmNvkb/pAxNnWUzzSyjaCjCiEiDM5kJXClomcvF2BTo/nQYepQ/8mmxdyc8ZCmdytGJB49ZeNTtCJA=="
      }
    }
  },
  {
    "type": "tool-input-start",
    "id": "id-1",
    "tool_name": "read_screen"
  },
  {
    "type": "tool-input-delta",
    "id": "id-1",
    "delta": "{\"id\":\"A"
  },
  {
    "type": "tool-input-delta",
    "id": "id-1",
    "delta": "\"}"
  },
  {
    "type": "tool-input-end",
    "id": "id-1"
  },
  {
    "type": "tool-call",
    "tool_call_id": "id-1",
    "tool_name": "read_screen",
    "input": "{\"id\":\"A\"}"
  },
  {
    "type": "tool-input-start",
    "id": "id-2",
    "tool_name": "read_screen"
  },
  {
    "type": "tool-input-delta",
    "id": "id-2",
    "delta": "{\"id\":\"B"
  },
  {
    "type": "tool-input-delta",
    "id": "id-2",
    "delta": "\"}"
  },
  {
    "type": "tool-input-end",
    "id": "id-2"
  },
  {
    "type": "tool-call",
    "tool_call_id": "id-2",
    "tool_name": "read_screen",
    "input": "{\"id\":\"B\"}"
  },
  {
    "type": "tool-input-start",
    "id": "id-3",
    "tool_name": "read_screen"
  },
  {
    "type": "tool-input-delta",
    "id": "id-3",
    "delta": "{\"id\":\"C"
  },
  {
    "type": "tool-input-delta",
    "id": "id-3",
    "delta": "\"}"
  },
  {
    "type": "tool-input-end",
    "id": "id-3"
  },
  {
    "type": "tool-call",
    "tool_call_id": "id-3",
    "tool_name": "read_screen",
    "input": "{\"id\":\"C\"}"
  },
  {
    "type": "reasoning-end",
    "id": "0"
  },
  {
    "type": "finish",
    "finish_reason": {
      "unified": "tool-calls",
      "raw": "STOP"
    },
    "usage": {
      "input": {
        "total": 249,
        "no_cache": 249,
        "cache_read": 0
      },
      "output": {
        "total": 241,
        "text": 58,
        "reasoning": 183
      }
    },
    "provider_metadata": {
      "google": {
        "promptFeedback": null,
        "groundingMetadata": null,
        "urlContextMetadata": null,
        "safetyRatings": null,
        "usageMetadata": {
          "promptTokenCount": 249,
          "candidatesTokenCount": 58,
          "totalTokenCount": 490,
          "trafficType": "PROVISIONED_THROUGHPUT",
          "promptTokensDetails": [
            {
              "modality": "TEXT",
              "tokenCount": 249
            }
          ],
          "candidatesTokensDetails": [
            {
              "modality": "TEXT",
              "tokenCount": 58
            }
          ],
          "thoughtsTokenCount": 183
        },
        "finishMessage": null,
        "serviceTier": null
      }
    }
  }
]
